# mcp-server-odoo

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_client.py
.github/workflows/: ci.yml  docker.yml  publish.yml
mcp_server_odoo/: __init__.py  __main__.py  access_control.py  audit.py  auth.py  cli.py  config.py  data_formatting.py  error_handling.py  fastmcp_server.py  field_formatters.py  odoo_connection.py  performance.py  resource_handlers.py  resources.py  schema_sanitizer.py  schemas.py  security.py  server.py  tools.py  utils.py  verify_schema.py  workflow_tools.py
tests/: conftest.py  test_access_control.py  test_access_control_yolo.py  test_advanced_resources.py  test_audit.py  test_auth.py  test_auth_matrix.py  test_authentication.py  test_basic_resources.py  test_caching.py  test_config.py  test_data_formatting.py  test_database_discovery.py  test_datetime_formatting.py  test_e2e_yolo.py  test_error_handling.py  test_error_sanitization_integration.py  test_error_sanitizer.py  test_field_formatters.py  test_fixes_integration.py  test_formatting.py  test_formatting_advanced.py  test_integration.py  test_integration_e2e.py  test_locale.py  test_mcp_client_validation.py  test_model_agnostic_example.py  test_odoo_connection.py  test_odoo_connection_basic.py  test_odoo_connection_crud.py  test_package_structure.py  test_performance.py  test_process_scoped_connection.py  test_record_retrieval.py  test_resource_query_params.py  test_resources.py  test_schema_sanitizer.py  test_search_resources.py  test_search_smart_defaults.py  test_security.py  (+16 more)
tests/helpers/: mcp_test_client.py  server_testing.py  transport_client.py
