[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-odoo"
version = "0.1.0"
description = "MCP server implementation for Odoo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = ""}
authors = [
    {name = "Andrey Ivanov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-asyncio>=0.21.0",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.scripts]
mcp-server-odoo = "mcp_server_odoo.__main__:main"

[tool.setuptools]
packages = ["mcp_server_odoo"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"